# api-airforce-sdk

./: .gitignore  .markdownlint.json  LICENSE  README.md
.github/: dependabot.yml
csharp/: README.md
csharp/Airforce/: Airforce.csproj  AirforceClient.cs  AirforceException.cs  ClientOptions.cs  Multipart.cs  SseStream.cs  Transport.cs
csharp/Airforce.Tests/: Airforce.Tests.csproj  ClientTests.cs
csharp/Airforce/Resources/: AccountResources.cs  AuthResources.cs  CatalogResource.cs  InferenceResources.cs  MediaResources.cs  Resource.cs
dart/: README.md  pubspec.yaml
dart/lib/: airforce.dart
dart/lib/src/: client.dart  exceptions.dart  sse.dart  transport.dart
dart/test/: airforce_test.dart
docs/: API_SURFACE.md
go/: README.md  account.go  auth.go  catalog.go  client.go  client_test.go  errors.go  go.mod  inference.go  media.go  streaming.go
java/: README.md  pom.xml
php/: README.md  composer.json
php/src/: AirforceException.php  ApiConnectionException.php  ApiTimeoutException.php  Client.php  CurlSender.php  HttpSender.php  MissingCredentialException.php  Multipart.php  Sse.php  Transport.php
php/src/Resources/: Audio.php  (+14 more)
php/tests/: run.php
python/: README.md  pyproject.toml
python/airforce/: __init__.py  _client.py  _exceptions.py  _streaming.py  _transport.py
python/airforce/resources/: __init__.py  _base.py  account.py  auth.py  catalog.py  inference.py  media.py
python/tests/: test_client.py  test_core.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  error.rs  lib.rs  sse.rs
rust/src/resources/: account.rs  auth.rs  catalog.rs  inference.rs  media.rs  mod.rs
rust/tests/: integration.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts
typescript/test/: client.test.ts  errors.test.ts  streaming.test.ts
(+46 files in other folders)
