[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airforce-api"
version = "0.0.1"
description = "Official Python SDK for the api.airforce AI gateway"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Airforce API" }]
keywords = ["airforce", "api.airforce", "ai", "llm", "openai", "chat", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://api.airforce"
Repository = "https://github.com/ApiAirforce/api-airforce-sdk"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["airforce"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
